--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.squareup.dagger:dagger-compiler:1.2.1'
-    compile 'com.squareup.dagger:dagger:1.2.1'
+    compile 'org.roboguice:roboguice:2.0'
+    compile 'com.google.guava:guava:r05'
 }
