--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,12 @@
             android:label="@string/pl.agh.edu.mobilecodereviewer.ChangeDetails.title" >
         </activity>
         <activity
-            android:name="pl.edu.agh.mobilecodereviewer.view.activities.ModifiedFiles">
+            android:name="pl.edu.agh.mobilecodereviewer.view.activities.ModifiedFiles"
+            android:label="@string/pl.agh.edu.mobilecodereviewer.ModifiedFiles.title">
+        </activity>
+        <activity
+            android:name="pl.edu.agh.mobilecodereviewer.view.activities.SourceExplorer"
+            android:label="@string/title_activity_source_explorer" >
         </activity>
     </application>
 
