--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'org.roboguice:roboguice:2.0'
     compile 'com.google.guava:guava:r05'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
