--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,15 +21,27 @@
         </activity>
         <activity
             android:name="pl.edu.agh.mobilecodereviewer.view.activities.ChangeDetails"
-            android:label="@string/pl.agh.edu.mobilecodereviewer.ChangeDetails.title" >
+            android:label="@string/pl.agh.edu.mobilecodereviewer.ChangeDetails.title"
+            android:parentActivityName="pl.edu.agh.mobilecodereviewer.view.activities.ChangesExplorer" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="pl.edu.agh.mobilecodereviewer.view.activities.ChangesExplorer" />
         </activity>
         <activity
             android:name="pl.edu.agh.mobilecodereviewer.view.activities.ModifiedFiles"
-            android:label="@string/pl.agh.edu.mobilecodereviewer.ModifiedFiles.title">
+            android:label="@string/pl.agh.edu.mobilecodereviewer.ModifiedFiles.title"
+            android:parentActivityName="pl.edu.agh.mobilecodereviewer.view.activities.ChangeDetails" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="pl.edu.agh.mobilecodereviewer.view.activities.ChangesExplorer" />
         </activity>
         <activity
             android:name="pl.edu.agh.mobilecodereviewer.view.activities.SourceExplorer"
-            android:label="@string/pl.agh.edu.mobilecodereviewer.SourceExplorer.title">
+            android:label="@string/pl.agh.edu.mobilecodereviewer.SourceExplorer.title"
+            android:parentActivityName="pl.edu.agh.mobilecodereviewer.view.activities.ModifiedFiles" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="pl.edu.agh.mobilecodereviewer.view.activities.ModifiedFiles" />
         </activity>
     </application>
 
