--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,6 @@
+project.ext['src.java.dir'] = ['src/test/java']
+project.ext['module.iml.file'] = "app.iml"
+apply from: 'gradle-android-add-dir.gradle'
 apply plugin: 'android'
 
 android {
@@ -24,10 +27,15 @@ android {
     }
 }
 
+apply plugin: 'android-unit-test'
+
 dependencies {
+    testCompile 'junit:junit:4.8+'
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'org.roboguice:roboguice:2.0'
     compile 'com.google.guava:guava:r05'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.squareup.retrofit:retrofit:1.6.0'
+    compile 'junit:junit:4.8+'
 }
