--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ apply plugin: 'android-unit-test'
 
 dependencies {
     testCompile 'junit:junit:4.8+'
+    testCompile 'org.mockito:mockito-all:1.8.4'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'org.roboguice:roboguice:2.0'
@@ -38,4 +39,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.squareup.retrofit:retrofit:1.6.0'
     compile 'junit:junit:4.8+'
+    compile 'org.mockito:mockito-all:1.8.4'
+    compile 'commons-codec:commons-codec:1.5'
 }
