--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.6.0'
     compile 'commons-codec:commons-codec:1.5'
     compile 'commons-io:commons-io:2.4'
+
+    compile 'junit:junit:4.11+'
+    compile 'org.mockito:mockito-all:1.8.4'
 }
