--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
     }
 }
 
@@ -40,14 +42,10 @@ dependencies {
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'org.roboguice:roboguice:2.0'
-    compile 'com.google.guava:guava:r05'
+    compile 'com.google.guava:guava:18.0'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.squareup.retrofit:retrofit:1.6.0'
     compile 'commons-codec:commons-codec:1.5'
     compile 'commons-io:commons-io:2.4'
-    compile 'com.urswolfer.gerrit.client.rest:gerrit-rest-java-client:0.8.0'
 
-
-    compile 'junit:junit:4.11+'
-    compile 'org.mockito:mockito-all:1.8.4'
 }
