--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,17 @@
 
 buildscript {
     repositories {
-        mavenLocal()
         mavenCentral()
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12+'
+        classpath 'com.android.tools.build:gradle:0.12.1'
         classpath 'com.github.jcandksolutions.gradle:android-unit-test:1.2.+'
     }
 }
 
 allprojects {
     repositories {
-        mavenLocal()
         mavenCentral()
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     }
