--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
         <activity
             android:name="pl.edu.agh.mobilecodereviewer.view.activities.ChangeDetails"
             android:label="@string/pl.agh.edu.mobilecodereviewer.ChangeDetails.title"
-            android:parentActivityName="pl.edu.agh.mobilecodereviewer.view.activities.ChangesExplorer" >
+            android:parentActivityName="pl.edu.agh.mobilecodereviewer.view.activities.ChangesExplorer">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="pl.edu.agh.mobilecodereviewer.view.activities.ChangesExplorer" />
@@ -85,7 +85,8 @@
         <activity
             android:name="pl.edu.agh.mobilecodereviewer.view.activities.SourceExplorer"
             android:label="@string/pl.agh.edu.mobilecodereviewer.SourceExplorer.title"
-            android:parentActivityName=".view.activities.ModifiedFilesTab" >
+            android:parentActivityName=".view.activities.ModifiedFilesTab"
+            android:uiOptions="splitActionBarWhenNarrow">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="pl.edu.agh.mobilecodereviewer.view.activities.ModifiedFiles" />
