--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     testCompile 'junit:junit:4.11+'
     testCompile 'org.mockito:mockito-all:1.8.4'
 
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('lib/JavaPrettify-1.2.1.jar')
     compile 'org.roboguice:roboguice:2.0'
     compile 'com.google.guava:guava:18.0'
     compile 'com.google.code.gson:gson:2.2.4'
