--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 19
         versionCode 03
-        versionName "Unconscious Badger 3.29"
+        versionName "Unconscious Badger 3.30"
     }
 
     compileOptions {
@@ -40,7 +40,7 @@ dependencies {
     testCompile 'junit:junit:4.11+'
     testCompile 'org.mockito:mockito-all:1.8.4'
 
-    compile files('lib/JavaPrettify-1.2.1.jar')
+    compile fileTree(dir: 'lib', include: '*.jar')
     compile 'org.roboguice:roboguice:2.0'
     compile 'com.google.guava:guava:18.0'
     compile 'com.google.code.gson:gson:2.2.4'
